Projeto refeito. Adição de logotipo e paleta de cores além de uma leve aplicação de JS.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Joffre...</title>
-    <link rel="shortcut icon" href="assets/icon/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="index-container">
+        <div class="div-group">
+            <div class="div-index-text">
+                <h1 class="index-title">Olá,<br>
+                Me chamo <span>Joffre Quintas</span>,<br>
+                sou um futuro Web Desenvolvedor.</h1>                      
+                <p class="index-paragraph"><mark>Mantra: <span>Don't Stop Learning!</span></mark></p>
+                <p class="index-paragraph"><mark>Estudante do 2º Período de Sistema de Informação.</mark></p> 
+                <p class="index-paragraph"><mark>Apaixonado por todas as possibilidades dentro do mundo da programação.</mark></p>
+                <div>
+                    <a class="btn-next-page" href="defaultPage.html">Continue me conhecendo</a>
+                </div>
+            </div>
+            <div>
+                <img class="fto-index-joffre" src="img/Joffre.png" alt="Foto Joffre">
+            </div> 
+        </div>
+
+        <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/8354f4af5c.js" crossorigin="anonymous"></script>
+    </div>   
 </body>
 </html>
