Correção no botão de Tema.

--- a/defaultPage.html
+++ b/defaultPage.html
@@ -44,8 +44,7 @@
             </section>
             <section class="soft-skills">
                 <h2 class="h2-styleset">Soft Skills</h2>
-                <p>Acabei chegando a postos de liderança nas áreas que atuei e acredito que o grande mérito disso seja a capacidade de comunicação e a habilidade de lidar com pessoas.</p>
-                <p>A seguir algumas das capacidades que busquei desenvolver:</p>
+                <p>Acabei chegando a postos de liderança nas áreas que atuei e acredito que o grande mérito disso seja a capacidade de comunicação e a habilidade de lidar com pessoas. <br> A seguir algumas das capacidades que busquei desenvolver:</p>
                 <ul>
                     <li>Comunicação Objetiva</li>
                     <li>Pensamento Crítico</li>
